--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -13,8 +13,8 @@ server {
     }
 
     location @backend {
-        proxy_set_header Host huggingface.co;
-        proxy_pass https://huggingface.co;
+        proxy_set_header Host www.baidu.com;
+        proxy_pass https://www.baidu.com;
         proxy_ssl_server_name on;
     }
 
