--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -1,7 +1,9 @@
 server {
+    resolver 223.5.5.5;
+    resolver_timeout 5s;
     listen 80;
     listen 443 ssl http2;
-    server_name down.cc;
+    server_name _;
     root /app;
     index index.html;
 
@@ -13,8 +15,8 @@ server {
     }
 
     location @backend {
-        proxy_set_header Host www.baidu.com;
-        proxy_pass https://www.baidu.com;
+        proxy_pass https://$host$request_uri;
+        proxy_set_header Host $host;
         proxy_ssl_server_name on;
     }
 
